# tiny_cad

./: '  .gitignore  .gitmodules  CMakeLists.txt  README.md  bd  rn  rn_dbg  test.k08  test.k16
include/: adaptive.h  adaptive_score.h  app_state.h  bezier_surface.h  bspline_surface.h  callbacks.h  component_manager.h  constant_matrices.h  constructors.h  cursor_params.h  curves.h  dummy.h  ecs.h  figure.h  frame_render.h  frame_state.h  frame_update.h  framebuffer.h  gl_object.h  gregory.h  gui.h  init.h  init_gl.h  input_handlers.h  input_state.h  log.h  parametric.h  paths.hpp  registry.h  relationship.h  rendering_systems.h  sampler.h  secondary.h  shader.h  shader_manager.h  systems.h  tags.h  torus.h  transformation.h
pg/: 1.k16  2.f10  3.k08  4.k01
resources/: bezier.frag  bezier.tes  bezier.tesc  bezier.tese  bezier.vert  bezier_patch.frag  bezier_patch.tesc  bezier_patch.tese  bspline.frag  bspline.tesc  bspline.tese  bspline.vert  bspline_patch.frag  bspline_patch.tesc  bspline_patch.tese  bspline_patch.vert  ehh55.json  ehh_add_points.json  ehh_intersections.json  empty2.json  final_empty.json  final_inter.json  final_inter2.json  final_inter3.json  final_obwodka.json  general.frag  general.vert  gregory.frag  gregory.tesc  gregory.tese  gregory.vert  grid.frag  grid.vert  hmm33.json  hmm44.json  merge.frag  merge.vert  test.json  test2.json  torus.frag  (+1 more)
resources/example_models/: c1cyllinder_c2_surface.json  c2test.json  final_pg.json  gregory.json  gregory2.json  gregory3.json  gregory4.json  hat.json  hat2.json  intersections.json  model_alt.json  model_merged.json  model_partial.json  model_split2.json  pipe_killer.json  self.json  self_pipe.json  teapot_pg.json  test1.json  test7.json  two.json  two_c1_cyllinders.json
resources/intersection_tests/: pipe_killer.json  test_1.json  test_10.json  test_11.json  test_12.json  test_13.json  test_14.json  test_15.json  test_16.json  test_2.json  test_3.json  test_4.json  test_5.json  test_6.json  test_7.json  test_8.json  test_9.json
resources/my_model/: flattened.json  flattened_named.json  leveled.json  named_fatter.json  named_points.json  plane2.json  plane22.json  plane_changed.json  plane_double_changed.json  resized.json  with_additional_points.json  with_contour.json  with_plane.json  with_plane_front.json
resources/programs/: test.f10  test.k16
src/: CMakeLists.txt  adaptive_score.cpp  callbacks.cpp  component_manager.cpp  constructors.cpp  frame_render.cpp  frame_state.cpp  frame_update.cpp  framebuffer.cpp  gui.cpp  init.cpp  init_gl.cpp  input_handlers.cpp  log.cpp  main.cpp  paths.cpp  registry.cpp  rendering_systems.cpp  sampler.cpp  shader.cpp  shader_manager.cpp  systems.cpp
src/systems/: bezier.cpp  bezier_surface.cpp  bspline.cpp  bspline_surface.cpp  gizmo.cpp  gl_systems.cpp  gregory.cpp  interpolation_curve.cpp  intersections.cpp  points.cpp  systems.cpp  torus.cpp
